--- a/monitoring/uss_qualifier/configurations/dev/resources.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/resources.yaml
@@ -132,7 +132,9 @@ general_flight_authorization:
               - REQ_002
               - REQ_007
             description: The first test step defined by the test designer
-            operation_rule_set: Rules1
+            additional_information:
+              new_jurisdiction_x:
+                operation_rule_set: Rules1
             volumes:
               - outline_circle:
                   center:
@@ -166,7 +168,9 @@ general_flight_authorization:
               - REQ_003
               - REQ_004
             description: The second test step defined by the test designer
-            operation_rule_set: Rules1
+            additional_information:
+              new_jurisdiction_x:
+                operation_rule_set: Rules1
             volumes:
               - outline_circle:
                   center:
