--- a/monitoring/uss_qualifier/configurations/dev/f3548/nominal_planning_conflict_equal_priority_not_permitted.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548/nominal_planning_conflict_equal_priority_not_permitted.yaml
@@ -2,7 +2,7 @@ v1:
   test_run:
     resources:
       resource_declarations:
-        "$ref": ../resources.yaml#/f3548_single_scenario
+        "$ref": ../library/resources.yaml#/f3548_single_scenario
     action:
       test_scenario:
         scenario_type: scenarios.astm.utm.ConflictEqualPriorityNotPermitted
@@ -12,6 +12,9 @@ v1:
           flight_intents: priority_preemption_flights
           dss: dss
   artifacts:
+    report:
+      report_path: output/report_f3548_nominal_planning_conflict_equal_priority_not_permitted.json
+      redact_access_tokens: true
     tested_roles:
       report_path: output/tested_requirements.html
       roles:
@@ -20,4 +23,3 @@ v1:
         participants:
         - uss1
         - uss2
-    "$ref": ../artifacts.yaml#/relative
