[uss-qualifier] test DSS subscriptions length constraints
Currently limited to the duration constraint (DSS0060)

Will add the one about the max number (DSS0050) of subscription once it is confirmed that this approach is the good one.

--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -30,6 +30,12 @@ actions:
                       dss: dss
                       id_generator: id_generator
                       isa: isa
+                - test_scenario:
+                    scenario_type: scenarios.astm.netrid.v22a.dss.SubscriptionValidation
+                    resources:
+                      dss: dss
+                      id_generator: id_generator
+                      isa: isa
             resources:
               dss: dss
               id_generator: id_generator
