--- a/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
@@ -13,6 +13,8 @@ v1:
                     observers: netrid_observers_v19
                     evaluation_configuration: netrid_observation_evaluation_configuration
                     dss_instances: netrid_dss_instances_v19
+                    id_generator: id_generator
+                    service_area: service_area
     artifacts:
         report:
             report_path: output/report_netrid_v19.json
