attempt fix syntax

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       run: make shell-lint
 
   monitoring-monitorlib-test:
-    uses: .github/workflows/monitoring-test.yml
+    uses: ./.github/workflows/monitoring-test.yml
     with:
       name: monitorlib
       script: |
@@ -39,7 +39,7 @@ jobs:
         make test
 
   monitoring-mock_uss-test:
-    uses: .github/workflows/monitoring-test.yml
+    uses: ./.github/workflows/monitoring-test.yml
     with:
       name: mock_uss
       script: |
@@ -47,7 +47,7 @@ jobs:
         make test
 
   monitoring-uss_qualifier_F3411-22a-test:
-    uses: .github/workflows/monitoring-test.yml
+    uses: ./.github/workflows/monitoring-test.yml
     with:
       name: uss_qualifier_F3411-22a
       script: |
@@ -59,7 +59,7 @@ jobs:
         make test
 
   monitoring-uss_qualifier_F3411-19-test:
-    uses: .github/workflows/monitoring-test.yml
+    uses: ./.github/workflows/monitoring-test.yml
     with:
       name: uss_qualifier_F3411-19
       script: |
@@ -71,7 +71,7 @@ jobs:
         make test
 
   monitoring-prober-test:
-    uses: .github/workflows/monitoring-test.yml
+    uses: ./.github/workflows/monitoring-test.yml
     with:
       name: prober
       script: |
