--- a/.github/workflows/monitoring-test.yml
+++ b/.github/workflows/monitoring-test.yml
@@ -1,5 +1,4 @@
-name: 'Run a monitoring test'
-description: 'Reusable workflow that runs a monitoring test.'
+name: 'Run a monitoring test (re-usable workflow)'
 
 on:
   workflow_call:
