--- a/.github/workflows/monitoring-test.yml
+++ b/.github/workflows/monitoring-test.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   monitoring-test:
     runs-on: ubuntu-latest
-    name: monitoring ${{ inputs.name }} test
+    name: ${{ inputs.name }} test
     steps:
     - name: Job information
       run: |
@@ -29,7 +29,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: true
-    - name: ${{ inputs.name }} test
+    - name: Run ${{ inputs.name }} test
       run: ${{ inputs.script }}
     - name: Save containers and tracer logs as artifact
       if: always()
