--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Shell lint
       run: make shell-lint
 
-  monitoring-monitorlib-test:
+  monitorlib-test:
     uses: ./.github/workflows/monitoring-test.yml
     with:
       name: monitorlib
@@ -38,7 +38,7 @@ jobs:
         cd monitoring/monitorlib
         make test
 
-  monitoring-mock_uss-test:
+  mock_uss-test:
     uses: ./.github/workflows/monitoring-test.yml
     with:
       name: mock_uss
@@ -46,7 +46,7 @@ jobs:
         cd monitoring/mock_uss
         make test
 
-  monitoring-uss_qualifier_F3411-22a-test:
+  uss_qualifier_F3411-22a-test:
     uses: ./.github/workflows/monitoring-test.yml
     with:
       name: uss_qualifier_F3411-22a
@@ -58,7 +58,7 @@ jobs:
         cd monitoring/uss_qualifier
         make test
 
-  monitoring-uss_qualifier_F3411-19-test:
+  uss_qualifier_F3411-19-test:
     uses: ./.github/workflows/monitoring-test.yml
     with:
       name: uss_qualifier_F3411-19
@@ -70,7 +70,7 @@ jobs:
         cd monitoring/uss_qualifier
         make test
 
-  monitoring-prober-test:
+  prober-test:
     uses: ./.github/workflows/monitoring-test.yml
     with:
       name: prober
