--- a/monitoring/uss_qualifier/configurations/dev/faa/uft/uft.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/faa/uft/uft.yaml
@@ -73,6 +73,7 @@ v1:
                             - participant_id: uss8082
                               rid_version: F3411-19
                               base_url: http://host.docker.internal:8082
+                              has_private_address: true
 
         action:
             test_suite:
