--- a/monitoring/uss_qualifier/configurations/dev/non_docker/resources.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/non_docker/resources.yaml
@@ -54,9 +54,11 @@ net_rid:
               - participant_id: uss1
                 rid_version: F3411-19
                 base_url: http://localhost:8082
+                has_private_address: true
               - participant_id: uss2
                 rid_version: F3411-19
                 base_url: http://localhost:8082
+                has_private_address: true
   netrid_dss_instances_v22a:
       resource_type: resources.astm.f3411.DSSInstancesResource
       dependencies:
@@ -66,9 +68,11 @@ net_rid:
               - participant_id: uss1
                 rid_version: F3411-22a
                 base_url: http://localhost:8082/rid/v2/
+                has_private_address: true
               - participant_id: uss2
                 rid_version: F3411-22a
                 base_url: http://localhost:8082/rid/v2/
+                has_private_address: true
 net_rid_sims:
   adjacent_circular_flights_data:
     resource_type: resources.netrid.FlightDataResource
