Update tested roles artifact

--- a/monitoring/uss_qualifier/configurations/dev/f3548.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548.yaml
@@ -15,13 +15,7 @@ v1:
           dss: dss
   artifacts:
     tested_roles:
-      report_path: output/tested_requirements_f3548.html
-      roles:
-        - name: Strategic Coordination role
-          requirement_set: astm.f3548.v21.scd
-          participants:
-            - uss1
-            - uss2
+      report_path: output/tested_roles_f3548
     report:
       report_path: output/report_f3548.json
       redact_access_tokens: true
