--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -89,13 +89,7 @@ v1:
 
     # Information about a report including a list of roles tested and which participants are attempting to fill them
     tested_roles:
-      report_path: output/tested_requirements_f3548_self_contained.html
-      roles:
-        - name: Strategic Coordination role
-          requirement_set: astm.f3548.v21.scd
-          participants:
-            - uss1
-            - uss2
+      report_path: output/tested_roles_f3548_self_contained
 
     graph:
       # Path to output GraphViz test file summarizing test run
