--- a/monitoring/uss_qualifier/configurations/dev/faa/uft/uft.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/faa/uft/uft.yaml
@@ -128,11 +128,5 @@ v1:
 
     artifacts:
         tested_roles:
-            report_path: output/tested_requirements.html
-            roles:
-                - name: Strategic Coordination role
-                  requirement_set: astm.f3548.v21.scd
-                  participants:
-                      - uss1
-                      - uss2
+            report_path: output/tested_roles_uft
         "$ref": ../../artifacts.yaml#/relative
