--- a/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
@@ -21,18 +21,4 @@ v1:
             redact_access_tokens: true
 
         tested_roles:
-            report_path: output/tested_requirements_netrid_v22a.html
-            roles:
-              - name: DSS Provider role
-                requirement_set: astm.f3411.v22a.dss_provider
-                participants:
-                  - uss1
-                  - uss2
-              - name: Service Provider role
-                requirement_set: astm.f3411.v22a.service_provider
-                participants:
-                  - uss1
-              - name: Display Provider role
-                requirement_set: astm.f3411.v22a.display_provider
-                participants:
-                  - uss2
+            report_path: output/tested_roles_netrid_v22a
