--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -26,21 +26,7 @@ v1:
           service_area: service_area
   artifacts:
     tested_roles:
-      report_path: output/tested_requirements_uspace.html
-      roles:
-        - name: Strategic Coordination role
-          requirement_set: astm.f3548.v21.scd
-          participants:
-            - uss1
-            - uss2
-        - name: Service Provider role
-          requirement_set: astm.f3411.v22a.service_provider
-          participants:
-            - uss1
-        - name: Display Provider role
-          requirement_set: astm.f3411.v22a.display_provider
-          participants:
-            - uss2
+      report_path: output/tested_roles_uspace
     report:
         report_path: output/report_uspace.json
         redact_access_tokens: true
