--- a/monitoring/uss_qualifier/configurations/dev/faa/uft/f3548.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/faa/uft/f3548.yaml
@@ -13,11 +13,5 @@ v1:
           dss: dss
   artifacts:
     tested_roles:
-      report_path: output/tested_requirements.html
-      roles:
-      - name: Strategic Coordination role
-        requirement_set: astm.f3548.v21.scd
-        participants:
-        - uss1
-        - uss2
+      report_path: output/tested_roles_f3548
     "$ref": ../../artifacts.yaml#/relative
