--- a/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
@@ -18,18 +18,4 @@ v1:
             report_path: output/report_netrid_v19.json
             redact_access_tokens: true
         tested_roles:
-            report_path: output/tested_requirements_netrid_v19.html
-            roles:
-              - name: DSS Provider role
-                requirement_set: astm.f3411.v19.dss_provider
-                participants:
-                  - uss1
-                  - uss2
-              - name: Service Provider role
-                requirement_set: astm.f3411.v19.service_provider
-                participants:
-                  - uss1
-              - name: Display Provider role
-                requirement_set: astm.f3411.v19.display_provider
-                participants:
-                  - uss2
+            report_path: output/tested_roles_netrid_v19
