--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -28,3 +28,6 @@ v1:
       report_path: output/tested_roles_uspace
     report:
         report_path: output/report_uspace.json
+        templated_reports:
+          - template_url: https://github.com/Orbitalize/reports/releases/download/v0.0.11/app-v0.0.11.zip
+            output_path: output/capabilities_uspace.html
