--- a/monitoring/Dockerfile
+++ b/monitoring/Dockerfile
@@ -12,7 +12,7 @@
 FROM python:3.8-slim
 # Not -alpine because: https://stackoverflow.com/a/58028091/651139
 
-RUN apt-get update && apt-get install -y openssl curl libgeos-dev gcc && apt-get install ca-certificates
+RUN apt-get update && apt-get install -y git openssl curl libgeos-dev gcc && apt-get install ca-certificates
 RUN mkdir -p /app/monitoring
 COPY ./requirements.txt /app/monitoring/requirements.txt
 RUN pip install -r /app/monitoring/requirements.txt
