Implement sun position times and clean up geotemporal

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ loguru==0.6.0
 lxml==4.9.1
 marko==1.2.2  # uss_qualifier
 pem==21.2.0  # deployment_manager
+pvlib==0.10.1
 pyjwt==2.4.0
 pykml==0.2.0
 pyopenssl  # No specific version target because we always want the latest SSL/TLS support
