[reporting] Add new templating approach (#160)
* [reporting] Add new templating approach

* Move redact_access_tokens to a higher configuration level

* Address PR comments + rename templated reports + fix case reference in jsonpath

* Update report injection

* template v0.0.12

* Fix configuration

* Fix missing cache folder when using Docker and v0.0.13

* v0.0.14

* Fix mkdir permission issue

--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -28,4 +28,6 @@ v1:
       report_path: output/tested_roles_uspace
     report:
         report_path: output/report_uspace.json
-        redact_access_tokens: true
+    templated_reports:
+      - template_url: https://github.com/Orbitalize/reports/releases/download/v0.0.14/app-v0.0.14.zip
+        output_path: output/capabilities_uspace.html
