--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -40,6 +40,15 @@ actions:
         evaluation_configuration: evaluation_configuration
         dss_pool: dss_instances
     on_failure: Continue
+  - test_scenario:
+      scenario_type: scenarios.astm.netrid.v19.Misbehavior
+      resources:
+        flights_data: flights_data
+        service_providers: service_providers
+        observers: observers
+        evaluation_configuration: evaluation_configuration
+        dss_pool: dss_instances
+      on_failure: Continue
 report_evaluation_scenario:
   scenario_type: scenarios.astm.netrid.v22a.AggregateChecks
   resources:
