--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -54,6 +54,7 @@ report_evaluation_scenario:
   resources:
     service_providers: service_providers
     observers: observers
+    dss_instances: dss_instances
 participant_verifiable_capabilities:
   - id: service_provider
     name: NetRID Service Provider
