--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -17,25 +17,7 @@ actions:
       specification:
         action_to_repeat:
           test_suite:
-            suite_definition:
-              name: DSS instance validator
-              resources:
-                dss: resources.astm.f3411.DSSInstanceResource
-                id_generator: resources.interuss.IDGeneratorResource
-                isa: resources.netrid.ServiceAreaResource
-              actions:
-                - test_scenario:
-                    scenario_type: scenarios.astm.netrid.v22a.dss.ISASimple
-                    resources:
-                      dss: dss
-                      id_generator: id_generator
-                      isa: isa
-                - test_scenario:
-                    scenario_type: scenarios.astm.netrid.v22a.dss.SubscriptionValidation
-                    resources:
-                      dss: dss
-                      id_generator: id_generator
-                      isa: isa
+            suite_type: suites.astm.netrid.f3411_22a.dss_probing
             resources:
               dss: dss
               id_generator: id_generator
