--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -41,7 +41,7 @@ actions:
         dss_pool: dss_instances
     on_failure: Continue
   - test_scenario:
-      scenario_type: scenarios.astm.netrid.v19.Misbehavior
+      scenario_type: scenarios.astm.netrid.v22a.Misbehavior
       resources:
         flights_data: flights_data
         service_providers: service_providers
