--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
@@ -25,6 +25,10 @@ actions:
         dss_instance_id: dss
       on_failure: Continue
   - test_scenario:
+      scenario_type: scenarios.astm.netrid.v19.dss.CRDBAccess
+      resources: {}
+      on_failure: Continue
+  - test_scenario:
       scenario_type: scenarios.astm.netrid.v19.DSSInteroperability
       resources:
         dss_instances: dss_instances
@@ -46,6 +50,10 @@ actions:
         observers: observers
         evaluation_configuration: evaluation_configuration
         dss_pool: dss_instances
+      on_failure: Continue
+  - test_scenario:
+      scenario_type: scenarios.astm.netrid.v19.OperatorInteractions
+      resources: {}
       on_failure: Continue
 report_evaluation_scenario:
   scenario_type: scenarios.astm.netrid.v19.AggregateChecks
