--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -27,6 +27,10 @@ actions:
         dss_instance_id: dss
       on_failure: Continue
   - test_scenario:
+      scenario_type: scenarios.astm.netrid.v22a.dss.CRDBAccess
+      resources: {}
+      on_failure: Continue
+  - test_scenario:
       scenario_type: scenarios.astm.netrid.v22a.DSSInteroperability
       resources:
         dss_instances: dss_instances
@@ -48,6 +52,10 @@ actions:
         observers: observers
         evaluation_configuration: evaluation_configuration
         dss_pool: dss_instances
+      on_failure: Continue
+  - test_scenario:
+      scenario_type: scenarios.astm.netrid.v22a.OperatorInteractions
+      resources: {}
       on_failure: Continue
 report_evaluation_scenario:
   scenario_type: scenarios.astm.netrid.v22a.AggregateChecks
