Add tested_requirements artifact

--- a/monitoring/uss_qualifier/configurations/dev/f3548.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548.yaml
@@ -18,3 +18,5 @@ v1:
       report_path: output/tested_roles_f3548
     report:
       report_path: output/report_f3548.json
+    tested_requirements:
+      output_path: output/tested_requirements_f3548
