--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -31,3 +31,5 @@ v1:
     templated_reports:
       - template_url: https://github.com/Orbitalize/reports/releases/download/v0.0.17/app-v0.0.17.zip
         output_path: output/capabilities_uspace.html
+    tested_requirements:
+      output_path: output/tested_requirements_uspace
