--- a/schemas/monitoring/uss_qualifier/configurations/configuration/ArtifactsConfiguration.json
+++ b/schemas/monitoring/uss_qualifier/configurations/configuration/ArtifactsConfiguration.json
@@ -51,6 +51,17 @@
       },
       "type": "array"
     },
+    "tested_requirements": {
+      "description": "If specified, configuration describing a desired report summarizing all tested requirements for each participant",
+      "oneOf": [
+        {
+          "type": "null"
+        },
+        {
+          "$ref": "TestedRequirementsConfiguration.json"
+        }
+      ]
+    },
     "tested_roles": {
       "description": "If specified, configuration describing a desired report summarizing tested requirements for each specified participant and role",
       "oneOf": [
