--- a/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
@@ -20,3 +20,5 @@ v1:
             report_path: output/report_netrid_v22a.json
         tested_roles:
             report_path: output/tested_roles_netrid_v22a
+        tested_requirements:
+            output_path: output/tested_requirements_f3411v22a
