--- a/schemas/monitoring/uss_qualifier/configurations/configuration/TestedRequirementsConfiguration.json
+++ b/schemas/monitoring/uss_qualifier/configurations/configuration/TestedRequirementsConfiguration.json
@@ -10,6 +10,38 @@
     "output_path": {
       "description": "Path of a folder into which report HTML files should be written",
       "type": "string"
+    },
+    "participant_requirements": {
+      "additionalProperties": {
+        "type": "string"
+      },
+      "description": "If a requirement collection is specified for a participant, only the requirements in the specified collection will be listed on that participant's report.",
+      "properties": {
+        "$ref": {
+          "description": "Path to content that replaces the $ref",
+          "type": "string"
+        }
+      },
+      "type": [
+        "object",
+        "null"
+      ]
+    },
+    "requirement_collections": {
+      "additionalProperties": {
+        "$ref": "../../requirements/definitions/RequirementCollection.json"
+      },
+      "description": "Definition of requirement collections specific to production of this artifact.",
+      "properties": {
+        "$ref": {
+          "description": "Path to content that replaces the $ref",
+          "type": "string"
+        }
+      },
+      "type": [
+        "object",
+        "null"
+      ]
     }
   },
   "required": [
