--- a/monitoring/uss_qualifier/configurations/dev/f3548.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548.yaml
@@ -20,3 +20,10 @@ v1:
       report_path: output/report_f3548.json
     tested_requirements:
       output_path: output/tested_requirements_f3548
+      requirement_collections:
+        scd:
+          requirement_sets:
+            - astm.f3548.v21.scd#Automated verification
+      participant_requirements:
+        uss1: scd
+        uss2: scd
