--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -33,3 +33,14 @@ v1:
         output_path: output/capabilities_uspace.html
     tested_requirements:
       output_path: output/tested_requirements_uspace
+      requirement_collections:
+        uspace:
+          requirement_collections:
+            - requirement_sets:
+                - astm.f3411.v22a.service_provider#Mandatory requirements
+                - astm.f3411.v22a.display_provider#Mandatory requirements
+                - astm.f3411.v22a.dss_provider#Mandatory requirements
+                - astm.f3548.v21.scd#Automated verification
+      participant_requirements:
+        uss1: uspace
+        uss2: uspace
