--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -20,6 +20,7 @@ actions:
             suite_type: suites.astm.netrid.f3411_22a.dss_probing
             resources:
               dss: dss
+              all_dss_instances: dss_instances
               id_generator: id_generator
               isa: service_area
           on_failure: Continue
@@ -30,11 +31,6 @@ actions:
       scenario_type: scenarios.astm.netrid.v22a.dss.CRDBAccess
       resources: {}
       on_failure: Continue
-  - test_scenario:
-      scenario_type: scenarios.astm.netrid.v22a.DSSInteroperability
-      resources:
-        dss_instances: dss_instances
-    on_failure: Continue
   - test_scenario:
       scenario_type: scenarios.astm.netrid.v22a.NominalBehavior
       resources:
@@ -609,4 +605,4 @@ participant_verifiable_capabilities:
       requirements_checked:
         checked:
           requirement_sets:
-            - "astm.f3411.v22a.dss_provider#Mandatory requirements"
+            - "astm.f3411.v22a.dss_provider"
