--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
@@ -1,6 +1,7 @@
-name: DSS instance probing for ASTM NetRID F3411-22a
+name: DSS testing for ASTM NetRID F3411-22a
 resources:
   dss: resources.astm.f3411.DSSInstanceResource
+  all_dss_instances: resources.astm.f3411.DSSInstancesResource?
   id_generator: resources.interuss.IDGeneratorResource
   isa: resources.netrid.ServiceAreaResource
 actions:
@@ -16,3 +17,8 @@ actions:
         dss: dss
         id_generator: id_generator
         isa: isa
+  - test_scenario:
+      scenario_type: scenarios.astm.netrid.v22a.DSSInteroperability
+      resources:
+        primary_dss_instance: dss
+        all_dss_instances: all_dss_instances
