--- a/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
@@ -27,11 +27,11 @@ v1:
                   requirement_sets:
                       - astm.f3411.v22a.service_provider#Mandatory requirements
                       - astm.f3411.v22a.display_provider#Mandatory requirements
-                      - astm.f3411.v22a.dss_provider#Mandatory requirements
+                      - astm.f3411.v22a.dss_provider
               sp_dss:
                   requirement_sets:
                       - astm.f3411.v22a.service_provider#Mandatory requirements
-                      - astm.f3411.v22a.dss_provider#Mandatory requirements
+                      - astm.f3411.v22a.dss_provider
                       - astm.f3548.v21.scd#Automated verification
             participant_requirements:
                 uss1: sp_dp_dss
