--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19/dss_probing.yaml
@@ -1,4 +1,4 @@
-name: DSS instance probing for ASTM NetRID F3411-19
+name: DSS testing for ASTM NetRID F3411-19
 resources:
   dss: resources.astm.f3411.DSSInstanceResource
   all_dss_instances: resources.astm.f3411.DSSInstancesResource?
@@ -22,3 +22,7 @@ actions:
       resources:
         primary_dss_instance: dss
         all_dss_instances: all_dss_instances
+  - test_scenario:
+      scenario_type: scenarios.astm.netrid.v19.dss.CRDBAccess
+      resources: {}
+      on_failure: Continue
