--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
@@ -22,3 +22,7 @@ actions:
       resources:
         primary_dss_instance: dss
         all_dss_instances: all_dss_instances
+  - test_scenario:
+      scenario_type: scenarios.astm.netrid.v22a.dss.CRDBAccess
+      resources: {}
+      on_failure: Continue
