--- a/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
@@ -51,12 +51,19 @@ v1:
           specification:
             base_url: https://uss_qualifier.test.utm/dummy_base_url
             footprint:
-              lat_min: 37.1853
-              lng_min: -80.6140
-              lat_max: 37.2148
-              lng_max: -80.5440
+              - lat: 37.1853
+                lng: -80.6140
+              - lat: 37.2148
+                lng: -80.6140
+              - lat: 37.2148
+                lng: -80.5440
+              - lat: 37.1853
+                lng: -80.5440
             altitude_min: 0
             altitude_max: 3048
+            reference_time: '2023-01-10T00:00:00.123456+00:00'
+            time_start: '2023-01-10T00:00:01.123456+00:00'
+            time_end: '2023-01-10T01:00:01.123456+00:00'
     action:
       test_suite:
         suite_type: suites.interuss.dss.all_tests
